--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.min.css">
-	<script src="js/main.min.js"></script>
+  <script src="js/libs/jquery.js"></script>
+	<script src="js/default.min.js"></script>
 </head>
 <body>
 
-  Let's go!
+  Let's Start
 
 </body>
 </html>
