--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,29 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru" class="home">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="dist/css/main.css">
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/slick-carousel/slick/slick.min.js"></script>
-	<script src="dist/js/main.js"></script>
+	<title>Kazyna</title>
+	@@include('_include/head.html')
 </head>
 <body>
 
-  Let's Starts
+  <div class="ab">
+    <div class="container">
+      <a href=""><img src="img/ab01.png" alt=""></a>
+    </div>
+    <!-- /.container -->
+  </div>
+  <!-- /.ab -->
+
+  @@include('blocks/header.html')
+
+  <main class="main">
+    main
+  </main>
+  <!-- /.main -->
+
+  @@include('blocks/footer.html')
+  @@include('_include/foot.html')
 
 </body>
 </html>
